--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support:support-v4:26.0.0-beta1'
     testImplementation 'junit:junit:4.12'
+
     compile 'com.sendbird.sdk:sendbird-android-sdk:3.0.55'
     compile 'org.jsoup:jsoup:1.11.2'
     compile 'com.fasterxml.jackson.core:jackson-core:2.6.3'
@@ -44,6 +45,8 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'ai.api:sdk:2.0.7@aar'
     compile 'ai.api:libai:1.6.12'
+    compile 'com.google.firebase:firebase-database:11.2.2'
+    compile 'com.firebaseui:firebase-ui-database:2.3.0'
 
     implementation files('/Users/alex/Downloads/jackson-databind-2.9.0.jar')
 }
