--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,13 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'ai.api:sdk:2.0.7@aar'
     compile 'ai.api:libai:1.6.12'
+
+    //firebase
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.firebaseui:firebase-ui-auth:3.2.2'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.firebaseui:firebase-ui-database:2.3.0'
+
+
     implementation files('/Users/alex/Downloads/jackson-databind-2.9.0.jar')
 }
