login ui fix by 유근창
로그인 관련 ui 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,20 +19,22 @@
         tools:replace="android:icon">
         <activity
             android:name=".UI.Main.MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity android:name=".EclassCrawl.JsoupTestActivity" />
         <activity android:name=".UI.Login.SplashActivity" />
         <activity android:name=".UI.Tutorial.TutorialActivity" />
-        <activity android:name=".UI.Login.LoginActivity">
+        <activity android:name=".UI.Login.LoginActivity"></activity>
+        <activity android:name=".UI.Login.SelectFavoriteActivity" />
+        <activity android:name=".UI.Main.chat.ChatActivity" />
+        <activity android:name=".UI.Login.SignUpActivity" />
+        <activity android:name=".Util.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UI.Login.SelectFavoriteActivity" />
-        <activity android:name=".UI.Main.chat.ChatActivity" />
-        <activity android:name=".UI.Login.SignUpActivity"></activity>
+        <activity android:name=".UI.Login.SignInActivity"></activity>
     </application>
 
 </manifest>
